[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Image10000.png" type="Texture" id=1]
[ext_resource path="res://Scripts/map.gd" type="Script" id=2]
[ext_resource path="res://Scenes/mob.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -32, -32, 0, 0, 0, 0, 1056, -32, 0, 0, 0, 0, 1056, 640 )
}

[node name="Map" type="Node2D"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )
mobSpawnRate = null

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 495.9, 268.1 )
scale = Vector2( 1025, 601 )
texture = ExtResource( 1 )

[node name="StartSpawn" type="Position2D" parent="."]
position = Vector2( 550.001, 276 )

[node name="MobRateSpawner" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -32, -32 )

[node name="TimeLimit" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="MobRateSpawner" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="MobRateSpawner" to="." method="_on_MobRateSpawner_timeout"]
